--- a/src/styles/themes.css
+++ b/src/styles/themes.css
@@ -9,6 +9,7 @@
   --accent: #eabfb8;
   --button-border: #5e4b56;
   --tag-button: rgb(183, 83, 76);
+  --solid-button-hover: #e9470b;
   --dark-button-inactive: #3e30ad;
   --card-border: #df462f;
   --card-shadow: #e49a6c;
